--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -14,7 +14,7 @@ a {
   text-decoration: none;
 }
 .confine {
-  max-width: 1200px;
+  max-width: min(1200px, 88%);
   margin: 0 auto;
 }
 button {
@@ -28,8 +28,10 @@ button {
 
 .btn {
   cursor: pointer;
-  transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: all 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
   display: block;
+  outline-offset: 50px;
+  outline-color: transparent;
   font-family: var(--fontAlt);
   &:hover {
     scale: 1.05;
@@ -223,6 +225,7 @@ body {
   border: 2px solid var(--accent);
   padding: 0.5em;
   color: var(--accent);
+  background: #242424;
   &:hover {
     scale: 1.05;
     color: black;
@@ -241,5 +244,20 @@ body {
   }
   &.d {
     --accent: #67adff;
+  }
+}
+.jaw {
+  display: flex;
+  gap: 0.45em;
+  align-items: center;
+  margin-left: 3em;
+  .j {
+    width: 40px;
+    height: 50px;
+    background: white;
+    clip-path: polygon(0 0, 100% 0, 100% 61%, 75% 100%, 0 100%, 0% 50%);
+    outline: 2px solid white;
+    clip-path: polygon(0 0, 100% 0, 100% 44%, 56% 100%, 0 100%, 0% 50%);
+    // border: 1px solid white;
   }
 }
