--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -29,22 +29,6 @@
         .btn {
           text-transform: uppercase;
         }
-
-        .jaw {
-          display: flex;
-          gap: 0.45em;
-          align-items: center;
-          margin-left: 3em;
-          .j {
-            width: 40px;
-            height: 40px;
-            background: white;
-            clip-path: polygon(0 0, 100% 0, 100% 61%, 75% 100%, 0 100%, 0% 50%);
-            outline: 2px solid white;
-            clip-path: polygon(0 0, 100% 0, 100% 44%, 56% 100%, 0 100%, 0% 50%);
-            // border: 1px solid white;
-          }
-        }
       }
     }
 
@@ -98,6 +82,7 @@
     border: 4px solid var(--grey);
     border-left: none;
     border-right: none;
+    transform: translateY(-10px);
     position: relative;
     z-index: 1;
     &::before {
