--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -220,6 +220,9 @@ body {
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.59);
 }
 
+.tu {
+  text-transform: uppercase;
+}
 .btn-icon {
   width: 30px;
   height: 30px;
