--- a/src/app/talent/[id]/talent.scss
+++ b/src/app/talent/[id]/talent.scss
@@ -23,8 +23,8 @@
           height: 833px;
           width: 500px;
 
-          background: black;
-          img {
+          // backgro                                                                                                                                                                                                                                                  und: black;
+          .t-mart {
             width: 100%;
             height: 100%;
             object-fit: contain;
@@ -178,6 +178,8 @@
               }
               .data {
                 font-family: var(--fontAlt);
+                font-size: 1.4rem;
+                line-height: 100%;
                 font-weight: bold;
               }
             }
@@ -188,6 +190,7 @@
             .sl {
               display: grid;
               grid-template-columns: 1fr 1fr;
+              width: fit-content;
               gap: 1em;
               margin-top: 1em;
             }
@@ -196,11 +199,11 @@
               display: flex;
               gap: 1em;
               background: #232323;
-              padding: 0.5em 1em;
+              padding: 0.5em 2em;
               border-radius: 3em;
               align-items: center;
               justify-content: center;
-              border: 2px solid var(--white);
+              border: 3px solid var(--white);
               position: relative;
               &:hover {
                 &::before {
@@ -226,9 +229,15 @@
                 font-weight: bold;
                 font-family: var(--fontAlt);
               }
-              svg {
+              svg,
+              img {
                 width: 30px;
                 height: 30px;
+              }
+              img {
+                object-fit: contain;
+                scale: 1.4;
+                filter: brightness(0%) invert(100%);
               }
             }
           }
@@ -270,6 +279,7 @@
             width: 100%;
             height: 250px;
             // width: 100%;
+            border: 3px solid white;
             border-radius: 0 2em;
             // min-height: 190px;
             aspect-ratio: 16/9;
