--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -4,6 +4,61 @@
     .confine {
       max-width: 1000px;
     }
+    position: relative;
+    .h-sidejaw {
+      // display: ;
+      position: absolute;
+      left: 0%;
+      z-index: -1;
+      top: 10%;
+      overflow: visible;
+      path {
+        animation: h-jaw 1s infinite ease-in-out alternate-reverse;
+        transform-origin: right;
+        &:nth-of-type(2) {
+          animation-delay: 500ms;
+        }
+        &:nth-of-type(1) {
+          animation-delay: 1000ms;
+        }
+      }
+    }
+
+    @keyframes h-jaw {
+      from {
+        transform: translateX(-10%);
+      }
+      to {
+        scale: 4 1;
+        transform: translateX(-50%);
+      }
+    }
+
+    @keyframes h-jaw-r {
+      from {
+        transform: translateX(-10%);
+      }
+      to {
+        transform: translateX(50%);
+        scale: 4 1;
+      }
+    }
+    .h-sidejaw-r {
+      position: absolute;
+      right: 0%;
+      top: 10%;
+      z-index: -1;
+      overflow: visible;
+      path {
+        animation: h-jaw-r 1s infinite ease-in-out alternate-reverse;
+        &:nth-of-type(2) {
+          animation-delay: 500ms;
+        }
+        &:nth-of-type(1) {
+          animation-delay: 1000ms;
+        }
+      }
+    }
     article {
       padding-top: 3em;
 
@@ -29,6 +84,10 @@
         .btn {
           text-transform: uppercase;
         }
+        align-items: center;
+        .svjaw {
+          height: 50px;
+        }
       }
     }
 
@@ -37,6 +96,49 @@
       border-radius: 2em 2em 0 0;
       position: relative;
       margin-top: 20px;
+
+      @media screen and (min-width: 1200px) {
+        @supports (animation-timeline: scroll()) {
+          scale: 0.9;
+          transform: translateY(40%);
+
+          animation: hv;
+          animation-timeline: scroll();
+          transform-origin: bottom;
+          @keyframes hv {
+            0% {
+              opacity: 0;
+            }
+            5% {
+              transform: translateY(0%);
+              scale: 1;
+              opacity: 1;
+            }
+            10% {
+              scale: 1.3;
+              transform: translateY(15%);
+              z-index: 10;
+              opacity: 1;
+              user-select: all;
+              pointer-events: all;
+            }
+            15% {
+              opacity: 1;
+              user-select: all;
+              pointer-events: all;
+            }
+            40% {
+              opacity: 0;
+              user-select: none;
+              pointer-events: none;
+              transform: translateY(-100%);
+            }
+            45% {
+              opacity: 0;
+            }
+          }
+        }
+      }
       &:hover {
         .decor-l {
           right: 95%;
@@ -72,6 +174,20 @@
         margin-top: 1em;
       }
     }
+
+    &::after {
+      content: "";
+      height: 600px;
+      width: 100%;
+      position: absolute;
+      z-index: -2;
+      background: var(--rainbow);
+      filter: blur(200px);
+      border-radius: 50%;
+      bottom: -70%;
+      opacity: 0.8;
+      // mask-image: linear-gradient(to bottom, transparent, white);
+    }
   }
 
   #main-about {
@@ -83,8 +199,8 @@
     border-left: none;
     border-right: none;
     transform: translateY(-10px);
-    position: relative;
-    z-index: 1;
+    // position: relative;
+    // z-index: 0;
     &::before {
       content: "";
       position: absolute;
@@ -123,10 +239,31 @@
       margin: 3em auto;
 
       article {
-        p {
+        .p {
           margin-top: 2em;
+          margin-bottom: 2em;
+        }
+        .controls {
+          display: flex;
+          align-items: center;
+          gap: 1em;
+          .pid {
+            font-size: 2rem;
+            font-family: var(--fontAlt);
+          }
+        }
+        .text-container {
+          min-height: 350px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
         }
       }
+      // .text-container {
+      // max-height: 250px;
+      // overflow-y: scroll;
+      // margin-top: 2em;
+      // }
       figure {
         display: flex;
         justify-content: center;
