--- a/src/app/home/talentSection/talentSection.scss
+++ b/src/app/home/talentSection/talentSection.scss
@@ -13,15 +13,25 @@
       font-size: 4rem;
     }
   }
+  position: relative;
 
   .talent-list-container {
-    overflow: hidden;
+    // overflow-y: hidden;
+    display: flex;
+    gap: 1em;
+    position: relative;
+  }
+  .scroller {
     max-width: 1200px;
     margin: 0 auto;
+
+    // overflow-x: hidden;
   }
+
   .talent-lists {
     display: flex;
-    gap: 2em;
+    gap: 1em;
+    position: relative;
     .talent-card {
       width: 300px;
       height: 500px;
