--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -315,21 +315,21 @@ body {
   height: 0px;
   z-index: -51;
   position: absolute;
-  opacity: 0.08;
+  opacity: 0.07;
   top: 15%;
   p {
-    font-size: 10rem;
+    font-size: 13rem;
     white-space: nowrap;
 
-    line-height: 100%;
+    line-height: 90%;
     font-weight: bolder;
     color: transparent;
     -webkit-text-stroke: 2px white;
     text-stroke: 2px white;
     letter-spacing: -5px;
     position: relative;
-    animation: rt 80s infinite linear alternate;
-    scale: 1 1.1;
+    animation: rt 80s infinite linear;
+    scale: 0.9 1.12;
     @keyframes rt {
       from {
         left: 0%;
