--- a/src/app/home/talentSection/talentSection.scss
+++ b/src/app/home/talentSection/talentSection.scss
@@ -1,8 +1,22 @@
 #home-talent {
+  padding-top: 200px;
+  .top-neon {
+    position: absolute;
+    left: 50%;
+    top: 0%;
+    transform: translate(-70%);
+    translate: 0 -80%;
+    z-index: -8;
+  }
+
+  .bg-text {
+    top: 0%;
+  }
   .t-h {
+    position: relative;
     margin: 0 auto;
+    // margin-top: 100px;
     text-align: center;
-    padding-top: 200px;
     .sh-contianer {
       max-width: 100%;
       display: flex;
@@ -11,6 +25,17 @@
 
     .h {
       font-size: 4rem;
+    }
+
+    .ht-l {
+      position: absolute;
+      left: -2%;
+      top: 0%;
+    }
+    .ht-r {
+      position: absolute;
+      top: 0%;
+      right: -2%;
     }
   }
   position: relative;
@@ -62,11 +87,11 @@
         .line-bg {
           outline: 2px solid var(--accent);
           outline-offset: -30px;
-          top: 10%;
+          top: 14%;
           // clip-path: polygon(0% 0%, 100% 0, 100% 64%, 0 63%);
           mask-image: linear-gradient(to bottom, white, transparent 50%);
           transform-origin: center;
-          border-radius: 5em;
+          border-radius: 4em;
           height: 100%;
           width: 100%;
           position: absolute;
@@ -78,11 +103,13 @@
           transition: all 500ms ease;
           width: 100%;
           height: 100%;
+          filter: drop-shadow(0px 0px 5px black);
           object-fit: contain;
         }
         &:hover {
           .talent-art {
             transform: translateY(5%);
+            filter: drop-shadow(0px 0px 14px black);
           }
         }
       }
