--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -233,8 +233,8 @@
       // margin: 0 auto;
       padding-block: 100px;
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 1em;
+      grid-template-columns: 1.4fr 1fr;
+      gap: 3em;
       align-items: center;
       margin: 3em auto;
 
@@ -257,6 +257,7 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+          filter: drop-shadow(0px 0px 14px black);
         }
       }
       // .text-container {
@@ -269,6 +270,7 @@
         justify-content: center;
         img {
           max-height: 300px;
+          filter: drop-shadow(0px 0px 14px black);
         }
       }
     }
