--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -310,7 +310,14 @@ body {
     }
   }
 }
-
+@keyframes blink {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .bg-text {
   display: flex;
   flex-direction: column;
