--- a/src/app/about/about.scss
+++ b/src/app/about/about.scss
@@ -38,7 +38,14 @@
         min-height: 400px;
         position: relative;
         @media screen and (min-width: 1024px) {
-          filter: drop-shadow(0px 0px 4px black);
+          .sides {
+            filter: drop-shadow(0px 0px 4px black);
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            user-select: none;
+            pointer-events: none;
+          }
           .dl {
             position: absolute;
             top: 30%;
