Add decor to talent

--- a/src/app/talents/talents.scss
+++ b/src/app/talents/talents.scss
@@ -31,6 +31,13 @@
           flex-direction: column;
           margin-bottom: 1em;
           position: relative;
+
+          svg {
+            position: absolute;
+            left: -100%;
+            bottom: -10%;
+            scale: 1.5;
+          }
           &::before {
             content: "";
             position: absolute;
@@ -114,12 +121,6 @@
             padding: 2em 0;
             gap: 1em;
             .tlcard {
-              width: 300px;
-              height: 300px;
-              background: #232323;
-              border: 5px solid var(--accent);
-              border-radius: 0 2em;
-
               &:hover {
                 scale: 1.05;
               }
@@ -128,6 +129,11 @@
                 height: 100%;
                 object-fit: cover;
                 border-radius: inherit;
+                width: 300px;
+                height: 300px;
+                background: #232323;
+                border: 5px solid var(--accent);
+                border-radius: 0 2em;
               }
 
               .info {
