--- a/src/app/talent/[id]/talent.scss
+++ b/src/app/talent/[id]/talent.scss
@@ -11,18 +11,65 @@
       }
     }
     .talent-part {
+      .bg-text {
+        top: 28%;
+        opacity: 0.05;
+        p {
+          font-size: 10rem;
+        }
+      }
       .confine {
         // display: grid;
         // grid-template-columns: 1fr 1fr;
-        display: flex;
         justify-content: center;
         display: grid;
         grid-template-columns: 500px 1fr;
         max-width: 1000px;
+        position: relative;
+        .tcl {
+          position: absolute;
+          z-index: -15;
+          bottom: 20%;
+          left: -15%;
+          scale: 0.8;
+        }
+        .tcr {
+          position: absolute;
+          z-index: -15;
+          top: -5%;
+          right: -15%;
+          scale: 0.8;
+        }
         .art {
           height: 833px;
           width: 500px;
+          position: relative;
 
+          .tsa {
+            position: absolute;
+            top: 2%;
+            left: -20%;
+            animation: blink 1s infinite linear alternate-reverse;
+            z-index: -10;
+            user-select: none;
+            pointer-events: none;
+          }
+          .d-dia {
+            position: absolute;
+            right: 70%;
+            z-index: -1;
+            top: 0%;
+            scale: 0.78;
+            user-select: none;
+            pointer-events: none;
+            path:not(.center) {
+              fill: var(--accent);
+            }
+
+            .center {
+              stroke: 2px var(--accent);
+            }
+          }
           // backgro                                                                                                                                                                                                                                                  und: black;
           .t-mart {
             width: 100%;
@@ -99,6 +146,24 @@
             margin-top: 3em;
             .name {
               font-size: 5rem;
+              line-height: 0.8;
+              margin-bottom: 0.2em;
+
+              &.ns {
+                position: absolute;
+                color: transparent;
+                font-size: 15rem;
+                top: 80%;
+                left: 0%;
+                letter-spacing: -50px;
+                text-stroke: 2px white;
+                -webkit-text-stroke: 2px white;
+                // writing-mode: sideways-lr;
+                // text-orientation: sideways-right;
+                z-index: -2;
+                // transform: translateX(90%);
+                opacity: 0.05;
+              }
             }
             .rb {
               display: flex;
@@ -258,14 +323,30 @@
       max-width: min(90%, 1200px);
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 2em;
+      gap: 1em;
+    }
+
+    .sn {
+      position: absolute;
+      width: 500px;
+      height: 500px;
+      top: 10%;
+      left: -200px;
+      z-index: -1;
+      scale: -1 1;
+
+      animation: blink 1s infinite linear alternate-reverse;
+      &.r {
+        left: initial;
+        right: -200px;
+      }
     }
     .td-h {
       display: flex;
       align-items: center;
       margin: 1em auto;
       .h {
-        font-size: 3rem;
+        font-size: 4rem;
       }
       svg {
         height: 45px;
@@ -279,8 +360,8 @@
             width: 100%;
             height: 250px;
             // width: 100%;
-            border: 3px solid white;
-            border-radius: 0 2em;
+            border: 2px solid white;
+            border-radius: 2em 0;
             // min-height: 190px;
             aspect-ratio: 16/9;
           }
@@ -301,6 +382,18 @@
       margin: 150px auto;
       align-items: center;
       .l {
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          top: -10%;
+          left: -10%;
+          width: 50%;
+          height: 70%;
+          background: url("/bg/zig2.png");
+
+          animation: bgX 50s infinite linear;
+        }
         .p {
           font-size: 3.5rem;
           max-width: 90%;
