--- a/src/app/achievements/achievements.scss
+++ b/src/app/achievements/achievements.scss
@@ -5,7 +5,21 @@
       display: grid;
       grid-template-columns: 2fr 1fr;
       gap: 4em;
+      position: relative;
       .slide {
+        position: relative;
+        .al {
+          position: absolute;
+          left: -5%;
+          top: 0%;
+          z-index: 1;
+        }
+        .ar {
+          position: absolute;
+          right: -5%;
+          z-index: 1;
+          bottom: 10%;
+        }
         .display {
           position: relative;
           border-radius: 2em 2em 2em;
