--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -233,7 +233,7 @@
       // margin: 0 auto;
       padding-block: 100px;
       display: grid;
-      grid-template-columns: 1.4fr 1fr;
+      grid-template-columns: 1.2fr 1fr;
       gap: 3em;
       align-items: center;
       margin: 3em auto;
@@ -253,11 +253,20 @@
           }
         }
         .text-container {
-          min-height: 350px;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          filter: drop-shadow(0px 0px 14px black);
+          // scroller/page
+          // min-height: 350px;
+          // display: flex;
+          // flex-direction: column;
+          // justify-content: space-between;
+          // filter: drop-shadow(0px 0px 14px black);
+
+          // scrollbar
+          margin-top: 1em;
+          max-height: 400px;
+          overflow-y: scroll;
+          p {
+            margin-block: 1em;
+          }
         }
       }
       // .text-container {
