--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -140,6 +140,7 @@ body {
   max-width: 100vw;
   overflow-x: clip;
   min-height: 150vh;
+  position: relative;
 }
 body {
   background: #0f0f0f url("/bg/pattern_cave.png");
