--- a/src/app/footer/footer.scss
+++ b/src/app/footer/footer.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 #footer {
   margin-top: 300px;
   position: relative;
@@ -12,12 +13,19 @@
       animation: bgX 20s infinite linear;
       // clip-path: polygon(28% 0, 73% 0, 80% 100%, 21% 100%);
       clip-path: polygon(24% 0, 78% 0, 79% 100%, 23% 100%);
+      @include mq(768) {
+        height: 10px;
+      }
     }
     .fsj-l {
       position: absolute;
       left: 2%;
       bottom: 95%;
       z-index: -1;
+      @include mq(768) {
+        height: 100px;
+        left: -20%;
+      }
       path {
         animation: fsj 1s infinite ease alternate-reverse;
         &:nth-of-type(2) {
@@ -42,6 +50,11 @@
       right: 2%;
       bottom: 95%;
       z-index: -1;
+
+      @include mq(768) {
+        height: 100px;
+        right: -20%;
+      }
       path {
         animation: fsj 1s infinite ease alternate-reverse;
         &:nth-of-type(2) {
@@ -63,12 +76,25 @@
       grid-template-columns: 1fr 1.5fr;
       align-items: center;
       height: 100%;
+
+      @include mq(768) {
+        display: flex;
+        flex-direction: column;
+
+        max-width: 100%;
+      }
       article {
+        @include mq(768) {
+          padding: 2em;
+        }
         .logo {
           max-width: 230px;
         }
         p {
           max-width: 80%;
+          @include mq(550) {
+            max-width: 100%;
+          }
           margin: 1em 0;
           color: var(--grey);
         }
@@ -94,6 +120,10 @@
             font-family: var(--fontAlt);
             font-size: 1.2rem;
             font-weight: bold;
+
+            @include mq(550) {
+              font-size: 1rem;
+            }
           }
         }
       }
@@ -107,6 +137,15 @@
         gap: 2em;
         padding: 2em 2em;
 
+        @include mq(768) {
+          width: 100%;
+        }
+        @include mq(550) {
+          padding-top: 4em;
+          display: flex;
+          flex-direction: column;
+        }
+
         padding-left: 3em;
         padding-bottom: 150px;
         position: relative;
@@ -114,11 +153,17 @@
           position: absolute;
           bottom: 10%;
           left: -2%;
+          @include mq(550) {
+            opacity: 0.2;
+          }
         }
         .sd-r {
           position: absolute;
           top: 10%;
           right: -2%;
+          @include mq(550) {
+            opacity: 0.2;
+          }
         }
         .left {
           display: flex;
