--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -3,7 +3,7 @@
   // min-height: 5000px;
   #hero {
     .confine {
-      max-width: 1000px;
+      max-width: min(1000px, 90%);
     }
     position: relative;
     .h-sidejaw {
@@ -13,6 +13,11 @@
       z-index: -1;
       top: 10%;
       overflow: visible;
+
+      @include mq(768) {
+        opacity: 0.4;
+        top: -20%;
+      }
       path {
         animation: h-jaw 1s infinite ease-in-out alternate-reverse;
         transform-origin: right;
@@ -50,6 +55,10 @@
       top: 10%;
       z-index: -1;
       overflow: visible;
+      @include mq(768) {
+        opacity: 0.4;
+        top: -20%;
+      }
       path {
         animation: h-jaw-r 1s infinite ease-in-out alternate-reverse;
         &:nth-of-type(2) {
@@ -67,15 +76,26 @@
         display: flex;
         gap: 1em;
         align-items: center;
+        @include mq(768) {
+          flex-direction: column-reverse;
+        }
         .sh {
           font-size: 2.5rem;
           white-space: nowrap;
           font-weight: 300;
           gap: 1em;
+          @include mq(768) {
+            font-size: clamp(1.5rem, 9vw, 2.5rem);
+            white-space: initial;
+            width: 100%;
+          }
         }
       }
       .h.mh {
         font-size: 3.5rem;
+        @include mq(768) {
+          font-size: clamp(1.5rem, 12vw, 3rem);
+        }
         text-transform: uppercase;
       }
       .action {
@@ -85,9 +105,29 @@
         .btn {
           text-transform: uppercase;
         }
+
+        @include mq(550) {
+          flex-wrap: wrap;
+          justify-content: center;
+          .btn {
+            width: 40%;
+          }
+        }
+        @include mq(420) {
+          flex-direction: column;
+          align-items: stretch;
+          gap: 0;
+          margin-top: 2em;
+          .btn {
+            width: 100%;
+            margin: 0;
+            justify-content: center;
+          }
+        }
         align-items: center;
         .svjaw {
           height: 50px;
+          width: 100%;
         }
       }
     }
@@ -98,48 +138,48 @@
       position: relative;
       margin-top: 20px;
 
-      @media screen and (min-width: 1200px) {
-        @supports (animation-timeline: scroll()) {
-          scale: 0.9;
-          transform: translateY(40%);
+      // @media screen and (min-width: 1200px) {
+      //   @supports (animation-timeline: scroll()) {
+      //     scale: 0.9;
+      //     transform: translateY(40%);
 
-          animation: hv;
-          animation-timeline: scroll();
-          transform-origin: bottom;
-          @keyframes hv {
-            0% {
-              opacity: 0;
-            }
-            5% {
-              transform: translateY(0%);
-              scale: 1;
-              opacity: 1;
-            }
-            10% {
-              scale: 1.3;
-              transform: translateY(15%);
-              z-index: 10;
-              opacity: 1;
-              user-select: all;
-              pointer-events: all;
-            }
-            15% {
-              opacity: 1;
-              user-select: all;
-              pointer-events: all;
-            }
-            40% {
-              opacity: 0;
-              user-select: none;
-              pointer-events: none;
-              transform: translateY(-100%);
-            }
-            45% {
-              opacity: 0;
-            }
-          }
-        }
-      }
+      //     animation: hv;
+      //     animation-timeline: scroll();
+      //     transform-origin: bottom;
+      //     @keyframes hv {
+      //       0% {
+      //         opacity: 0;
+      //       }
+      //       5% {
+      //         transform: translateY(0%);
+      //         scale: 1;
+      //         opacity: 1;
+      //       }
+      //       10% {
+      //         scale: 1.3;
+      //         transform: translateY(15%);
+      //         z-index: 10;
+      //         opacity: 1;
+      //         user-select: all;
+      //         pointer-events: all;
+      //       }
+      //       15% {
+      //         opacity: 1;
+      //         user-select: all;
+      //         pointer-events: all;
+      //       }
+      //       40% {
+      //         opacity: 0;
+      //         user-select: none;
+      //         pointer-events: none;
+      //         transform: translateY(-100%);
+      //       }
+      //       45% {
+      //         opacity: 0;
+      //       }
+      //     }
+      //   }
+      // }
       &:hover {
         .decor-l {
           right: 95%;
@@ -167,6 +207,9 @@
       &::before,
       &::after {
         scale: 1.009 0.97;
+        @include mq(550) {
+          scale: 1.03 0.87;
+        }
       }
       .video-center {
         border-radius: inherit;
@@ -230,7 +273,7 @@
     }
 
     .confine {
-      max-width: 1100px;
+      max-width: min(1100px, 90%);
       // margin: 0 auto;
       padding-block: 100px;
       display: grid;
@@ -239,6 +282,10 @@
       align-items: center;
       margin: 3em auto;
 
+      @include mq(768) {
+        display: flex;
+        flex-direction: column-reverse;
+      }
       article {
         .p {
           margin-top: 2em;
@@ -281,6 +328,12 @@
         img {
           max-height: 300px;
           filter: drop-shadow(0px 0px 14px black);
+          @include mq(768) {
+            max-height: 250px;
+          }
+          @include mq(468) {
+            max-height: 200px;
+          }
         }
       }
     }
