--- a/src/app/home/talentSection/talentSection.scss
+++ b/src/app/home/talentSection/talentSection.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 #home-talent {
   padding-top: 200px;
   .top-neon {
@@ -29,13 +30,27 @@
 
     .ht-l {
       position: absolute;
+      z-index: -1;
       left: -2%;
       top: 0%;
+      @include mq(768) {
+        left: -20%;
+      }
+      @include mq(550) {
+        left: -50%;
+      }
     }
     .ht-r {
       position: absolute;
       top: 0%;
+      z-index: -1;
       right: -2%;
+      @include mq(768) {
+        right: -20%;
+      }
+      @include mq(550) {
+        right: -50%;
+      }
     }
   }
   position: relative;
@@ -60,9 +75,16 @@
     .talent-card {
       width: 300px;
       height: 500px;
+
       // background: red;
       display: grid;
       grid-template-rows: 420px 1fr;
+
+      @include mq(768) {
+        width: 230px;
+        height: 400px;
+        grid-template-rows: 300px 1fr;
+      }
       --accent: #8b2223;
       position: relative;
       .top {
@@ -120,9 +142,15 @@
         .name {
           font-size: 3rem;
           color: var(--accent);
+          @include mq(768) {
+            font-size: 2rem;
+          }
         }
         svg {
           fill: var(--accent);
+          @include mq(768) {
+            height: 20px;
+          }
           path {
             fill: var(--accent);
           }
